GKE/student-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: student-api-service
spec:
    selector:
        app: student-api
    type: LoadBalancer
    ports:
    - port: 5050
      targetPort: 5050
      protocol: TCP
