GKE/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  -  http:
      paths:
      - path: /students
        pathType: Prefix
        backend:
          service:
            name: student-api-service
            port:
              number: 5050
      - path: /courses
        pathType: Prefix
        backend:
          service:
            name: course-api-service
            port:
              number: 3030


  #  defaultBackend:
  #    service:
  #     name: student-api-service
  #     port:
  #       number: 5050
